--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -29,28 +29,24 @@
 - taxonomy: 工作日常
   icon: fas fa-tools fa-lg
   list:
-    - term: 云上资源
+    - term: 工作常用
       links:
+        - title: 未来门户
+          logo: 开源中国.jpg
+          url: https://pm.crm.cn:8000
+          description: 开源技术交流社区。
         - title: OA
           logo: coding.png
           url: https://d.dingoa.com/sxyzsk/login.jsp
           description: OA登录
-        - title: 禅道
-          logo: https://api.iowen.cn/favicon/www.zentao.net.png
-          url: https://pm.crm.cn:8087/
-          description: Bug管理系统
-        - title: GitLab
-          logo: https://api.iowen.cn/favicon/gitlab.com.png
-          url: https://pm.crm.cn:8443/
-          description: GitLab仓库
-        - title: SeaFile
-          logo: alist.svg
-          url: https://pm.crm.cn:8143/
-          description: 公共文件存储
-        - title: 固件版本
-          logo: liqi.png
-          url: https://pm.crm.cn:9080/download/build/
-          description: 每日编译等
+        - title: 报销
+          logo: abstractfonts.png
+          url: https://yonbip-core3.diwork.com/#/
+          description: 用友报销
+        - title: 每日编译
+          logo: 腾讯云.jpg
+          url: https://pm.crm.cn:9080/download/build/nightly/
+          description: 每日版本列表
     - term: 本地内网
       links:
         - title: NAS面板(内网)
@@ -58,17 +54,22 @@
           logo: trianglify.png
           description: NAS管理与配置
         - title: OpenGrok(内网)
-          url: http://192.168.3.8:8080
+          url: http://192.168.1.8:8080
           logo: Android9patch.png
-          description: 代码搜索引擎
+          description: 内网代码搜索引擎
+        - title: 文件服务器
+          logo: xiyou.png
+          url: http://192.168.1.8
+          description: 共享文件列表
         - title: Aria2下载(内网)
-          url: http://192.168.3.8:16804
+          url: http://192.168.1.8:2082
           logo: Illustrator.png
           description: 网盘下载神器
+
     - term: 书签收藏
       links:
         - title: AOSP备用
-          url: http://aospxref.com/
+          url: http://androidxref.com/
           logo: Android9patch.png
           description: AOSP备用站代码搜索
         - title: AndroidStudio
